Fix Wallet Gaps (QuickView)

--- a/Tsumugi/Content/css/wallet.css
+++ b/Tsumugi/Content/css/wallet.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 20px 20px;
+    gap: 55px 20px;
     grid-template-areas: ". . ."". . ."". . .";
 }
 
